fix: style on mobile devices

--- a/source/css/response.styl
+++ b/source/css/response.styl
@@ -8,19 +8,22 @@
     padding: 18px 0 20px
     flex-direction: column
     div.info
-      margin: 0
+      margin: 0 !important
+      margin-top: 10px !important
       width: 100%
     img
       margin: 0
   #main > ul > li:first-child
     margin-top: -35px
   #main h3.date
-    font-size: 11px
-    position: static
+    font-size: 11px !important
+    position: static !important
     margin-top: 10px
     align-self: flex-start
   #main > ul > li img.index-cover
-    width: 80%
+    width: 80% !important
+    margin: 0 !important
+    margin-top: 10px !important
   #main article.post
     line-height: 22px
     h1
